[package]
name = "blinker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.3" }
log = { version = "0.4", features = ["release_max_level_off"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.12.0"
tantivy = { path = "../tantivy" }

[workspace]
members = ["server"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }

[profile.release]
debug = true

[[bench]]
name = "register"
harness = false
