[package]
name = "blinker-server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blinker = { path = ".." }
once_cell = "1.19"
rocket = { version = "0.5.0-rc.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tantivy = { path = "../../tantivy" }
